@@ -7,6 +7,7 @@ Standards-Version: 3.9.7
 Build-Depends: cdbs (>= 0.4.41),
                debhelper (>= 9),
                dh-autoreconf,
+               dh-exec,
                gnome-common,
                autotools-dev,
                intltool (>= 0.50.0),
