@@ -3,6 +3,8 @@ gnome-terminal (3.20.2-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Drop Build-Depends on gnome-doc-utils, no longer needed.
   * Refresh patches.
+  * Use dh-exec to install the Linux specific gnome-shell search provider ini
+    file.
 
  -- Michael Biebl <biebl@debian.org>  Wed, 20 Apr 2016 02:50:59 +0200
 
